--- a/_config.yml
+++ b/_config.yml
@@ -19,27 +19,30 @@ plugins:
 collections_dir: collections
 collections:
   standard:
-    permalink: /docs/:path/
+    permalink: /components/:path/
     output: true
     order: 1
   layout:
-    permalink: /docs/:path/
+    permalink: /components/:path/
     output: true
     order: 2
   general:
-    permalink: /docs/:path/
+    permalink: /components/:path/
     output: true
     order: 3
   form:
-    permalink: /docs/:path/
+    permalink: /components/:path/
     output: true
     order: 4
   helpers:
-    permalink: /docs/:path/
+    permalink: /components/:path/
     output: true
     order: 5
   guides:
     permalink: /guides/:path/
+    output: true
+  get-started:
+    permalink: /get-started/:path/
     output: true
   patterns:
     permalink: /patterns/:path/
