--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,41 +3,26 @@
 
 - title: Guides
   url: /guides/
-  lvl2:
-      - title: Developers
-        url: /guides/developers/
-        lvl3:
-            - title: Installing the Design System
-              url: /docs/getting-started/
-            - title: Accessibility for Coding
-              url: /guides/developers/accessibility-coding/
-            - title: Color Contrast Checker
-              url: /guides/developers/color-contrast/
+  
 
-      - title: Designers
-        url: /guides/designers/
-        lvl3:
-            #- title: Using the Sketch UI Kit
-            #  url: /guides/designers/sketch-kit/
-            - title: Accessibility for Design
-              url: /guides/designers/accessibility-design/
-            - title: Color Contrast Checker
-              url: /guides/designers/color-contrast/
-            - title: Image Optimisation
-              url: /guides/designers/image-optimisation/
+- title: Get Started
+  url: /get-started/customise-sgds/
 
-      - title: Writers
-        url: /guides/writers/
-        lvl3:
-            - title: Accessibility for Content
-              url: /guides/writers/accessibility-content/
+- title: Components
+  url: /components/masthead/
 
-- title: Docs
-  url: /docs/
+- title: Utilities
+  url: /utitlies/
 
 - title: Patterns
   url: /patterns/
+
+- title: Templates
+  url: /templates/
   
 - title: Theme Customiser
   url: 'https://customiser.designsystem.gov.sg'
   target: '_blank'
+
+- title: "More"
+  
