Update components path and utilities. Fixes for sidenav

--- a/_config.yml
+++ b/_config.yml
@@ -22,10 +22,6 @@ collections:
     permalink: /components/:path/
     output: true
     order: 1
-  layout:
-    permalink: /components/:path/
-    output: true
-    order: 2
   general:
     permalink: /components/:path/
     output: true
@@ -43,6 +39,9 @@ collections:
     output: true
   get-started:
     permalink: /get-started/:path/
+    output: true
+  utilities:
+    permalink: /utilities/:path/
     output: true
   patterns:
     permalink: /patterns/:path/
