--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -12,7 +12,7 @@
   url: /components/masthead/
 
 - title: Utilities
-  url: /utitlies/
+  url: /utilities/typography/
 
 - title: Patterns
   url: /patterns/
