--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "webpack-cli": "^3.3.12"
   },
   "dependencies": {
-    "flatpickr": "^4.6.9"
+    "flatpickr": "^4.6.9",
+    "vue-multiselect": "^2.1.6"
   }
 }
